# semio_launch

./: CMakeLists.txt  Readme.md  package.xml
config/: default.rviz
launch/: all.launch  attention.launch  attention_rec.launch  attention_targets.launch  deictic_rec.launch  deictic_targets.launch  deixis.launch  humanoid_server.launch  rviz.launch  transforms.launch  visualization.launch  visualization_server.launch
scripts/: semio_run.py  static_transform_publisher.sh
