<package>
  <name>semio_launch</name>
  <version>0.1.0</version>

  <description>The semio_launch package</description>

  <maintainer email="support@semio.xyz">Semio Corp</maintainer>
  <license>GPLv3</license>
  <url type="website">https://semio.xyz</url>
  <author email="support@semio.xyz">Semio Corp</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
